# cheatsheet-generator

./: .gitignore  .pre-commit-config.yaml  README.md  build_executable.py  hotkeys.yaml  pyproject.toml
.github/workflows/: build.yml
src/cheatsheet_generator/: cli.py  generator.py  models.py  parser.py
tests/: test_cli.py  test_generator.py  test_models.py  test_parser.py
